* Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.12.0
- Add RockyLinux 8 support

* Sun Dec 18 2022 Trevor Vaughan <trevor@sicura.us> - 0.11.0
- Added:
  - The module now supports Alma Linux 8 and Rocky Linux 8

* Sun Sep 25 2022 Trevor Vaughan <trevor@sicura.us> - 0.10.0
- Added:
  - The module now supports Amazon Linux 2
- Changed:
  - Added a `.rubocop.yml`
  - Rubocop'd the Ruby

* Mon Jun 06 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.9.1
- Fixed:
  - Remove deprecated `daemon_reload` parameter from `systemd::dropin_file`

* Fri Jun 03 2022 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.9.0
- Update from camptocamp/systemd to puppet/systemd

* Wed Jun 23 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.8.0
- Updated the README

* Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.8.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Wed May 26 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.7.1
- Fixed
  - Mask the service when disabling for rngd compatibility so that it is not
    restarted on reboot
- Changed
  - Support puppetlabs/stdlib 7.X
  - Updated REFERENCE.md

* Wed Feb 03 2021 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.7.0
- Ensure that haveged does not start by default if rngd is running
- Add `haveged__rngd_enabled` fact
- Remove all remaining EL6 code
- Migrate all capabilities to systemd
- Update parameter documentation and generate REFERENCE.md
- Add support for Puppet 7
- Fix spec tests

* Thu Dec 17 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.7.0
- Removed EL6 support

* Mon Dec 16 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.6.0-0
- Add EL 8 support

* Fri Aug 02 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.5.0-0
- Remove Puppet 4 support
- Add Puppet 6 support
- Add puppetlabs-stdlib 6 support
- Maintenance: removed OBE build/rpm_metadata/requires

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.7-0